--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -12,6 +12,12 @@
   <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/gameOver"/>
+
+
+  <ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:src="@drawable/background"/>
 
   <LinearLayout
