--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -9,6 +9,7 @@
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.rafaelaranda.examen2parcial.MultiplayerActivity">
 
+
   <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -18,6 +19,7 @@
   <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/background"
     android:src="@drawable/background"/>
 
   <LinearLayout
@@ -102,5 +104,14 @@
       android:src="@drawable/empty"
       android:id="@+id/boton9"/>
   </LinearLayout>
+
+  <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/background"
+    android:id="@+id/restart"
+    android:layout_marginTop="25dp"
+    android:gravity="center"
+    android:text="Reiniciar juego"/>
 
 </RelativeLayout>
