--- a/app/src/main/res/layout/activity_single_player.xml
+++ b/app/src/main/res/layout/activity_single_player.xml
@@ -7,13 +7,12 @@
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
-  tools:context="com.example.rafaelaranda.examen2parcial.MultiplayerActivity">
-
+  tools:context="com.example.rafaelaranda.examen2parcial.SinglePlayerActivity">
 
   <ImageView
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:id="@+id/gameOver"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/gameOver"/>
 
 
   <ImageView
